# novel

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/: __init__.py  cli.py  exceptions.py  generator.py  main.py
src/agent/: __init__.py  auditor.py  base.py  context_builder.py  designer.py  human_loop.py  planner.py  polisher.py  prompt_loader.py  tools.py  writer.py
src/agent/prompts/: auditor.md  designer.md  planner.md  polisher.md  writer.md
src/core/: __init__.py  character.py  coordinator.py  live.py  map.py  state.py
src/core/graph/: __init__.py  timeline.py  types.py
src/llm/: __init__.py  knowledge.py  provider.py
web/: App.jsx  index.css  index.html  package-lock.json  package.json  tailwind.config.js
